--- a/Index.html
+++ b/Index.html
@@ -4,4 +4,5 @@
 <meta charset= "utf-8">
 <meta name= "viewport" content= "width= device-width, initial-scale= 1">
 <title> Quotes of Albert Einstein </title>
-<link rel= "Stylesheet" href= "
+<link rel= "Stylesheet" href= "https://github.com/aishashoaib131/style.css
+
