--- a/Index.html
+++ b/Index.html
@@ -4,5 +4,45 @@
 <meta charset= "utf-8">
 <meta name= "viewport" content= "width= device-width, initial-scale= 1">
 <title> Quotes of Albert Einstein </title>
-<link rel= "Stylesheet" href= "https://github.com/aishashoaib131/style.css
+<link rel= "Stylesheet" href= "https://github.com/aishashoaib131/Assignments-For-HTML5-CSS-and-JavaScript-for-Web-Developers/blob/d4a9374a84381b3822c626760fd69b40a117c67f/CSS_Style>
+</head>
 
+<body>
+<h1> Best of Albert Einstein </h1>
+ <div class= "row">
+   <div class= "col-lg-4 col-md-6 col-sm-12">
+     <section class= "life">
+       <h2> For Life </h2>
+       <p>
+        "Life is like riding a bicycle.
+         To keep your balance, you must
+         Keep moving."
+         -Albert Einstein
+       </p>
+     </section>
+   </div>
+   <div class= "col-lg-4 col-md-6 col-sm-12">
+     <section class= "future">
+       <h2> To Future </h2>
+       <p>
+        "I never think of future.
+         It comes soon enough."
+         -Albert Einstein
+       </p>
+     </section>
+   </div>
+   <div class= "col-lg-4 col-md-12 col-sm-12">
+     <section class= "dream">
+       <h2> My Dream </h2>
+       <p>
+        "At least once a day,
+         Allow yourself the 
+         freedom to think &
+         dream for yourself."
+         -Albert Einstein
+       </p>
+     </section>
+    </div>
+   </div>
+</body>
+</html>
